Reorganize the app scaffolding in modules

--- a/src/app/classroom/pages/classroom/classroom.component.html
+++ b/src/app/classroom/pages/classroom/classroom.component.html
@@ -15,7 +15,7 @@
   <mat-sidenav-content
     [@onMainContentChange]="{value: onSideNavChange ? 'open' : 'close', params: {leftClose: animStyles.close.left, leftOpen: animStyles.open.left}}">
     <div class="main-content">
-      <section class="aula-container">
+      <section class="classroom-container">
         <router-outlet></router-outlet>
       </section>
     </div>
