--- a/src/app/classroom/pages/classroom/classroom.component.scss
+++ b/src/app/classroom/pages/classroom/classroom.component.scss
@@ -3,6 +3,6 @@
   height: calc(100vh - var(--main-header-size)) !important;
 }
 
-.aula-container {
+.classroom-container {
   padding: var(--main-padding-size);
 }
