Refactor: student -> studen-card

--- a/src/app/classroom/pages/student-list/student-list.component.html
+++ b/src/app/classroom/pages/student-list/student-list.component.html
@@ -25,7 +25,7 @@
 
 <!-- Students -->
 <ng-container *ngFor="let student of studentListFiltered">
-  <a13-student [(student)]="student"></a13-student>
+  <a13-student-card [(student)]="student"></a13-student-card>
 </ng-container>
 
 <!-- Empty list -->
