Create toast service

--- a/src/scss/theming.scss
+++ b/src/scss/theming.scss
@@ -12,3 +12,8 @@
 	background-color: $black-12-opacity;
 	mat-icon, span { color: white; }
 }
+
+snack-bar-container {
+	color: white;
+	background-color: #323232;
+}
