--- a/src/app/classroom/components/header/header.component.html
+++ b/src/app/classroom/components/header/header.component.html
@@ -14,7 +14,7 @@
   <div class="spacer"></div>
 
   <!-- Sign Out -->
-  <button class="menu-button mr-q" mat-icon-button (click)="signOut()" attr.aria-label="{{'SIGN.OUT' | translate}}">
+  <button class="menu-button mr-q" mat-icon-button (click)="logOut()" attr.aria-label="{{'SIGN.OUT' | translate}}">
     <mat-icon>exit_to_app</mat-icon>
   </button>
 </mat-toolbar>
