--- a/src/app/authentication/components/login/login.component.html
+++ b/src/app/authentication/components/login/login.component.html
@@ -19,8 +19,9 @@
     <form [formGroup]="formGroup" class="login-form pt-h">
 
       <!-- Email -->
-      <mat-form-field class="mb-1">
-        <input matInput type="text" required placeholder="{{'EMAIL' | translate}}" formControlName="email">
+      <mat-form-field class="mb-1"  appearance="outline">
+        <mat-label>{{'EMAIL' | translate}}</mat-label>
+        <input matInput type="text" required formControlName="email">
         <button mat-button *ngIf="formGroup.controls['email'].value" matSuffix mat-icon-button
           attr.aria-label="{{'RESET_EMAIL' | translate}}" (click)="formGroup.controls['email'].reset()">
           <mat-icon class="mat-icon-24 mat-hint">close</mat-icon>
@@ -30,12 +31,12 @@
         </mat-error>
       </mat-form-field>
 
-      <div class="mb-3" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between center" fxLayoutGap="1rem">
+      <div class="mb-1" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between center" fxLayoutGap="1rem">
 
         <!-- Password -->
-        <mat-form-field>
-          <input matInput type="{{passwordType}}" required placeholder="{{'PASSWORD' | translate}}"
-            formControlName="password">
+        <mat-form-field  appearance="outline">
+          <mat-label>{{'PASSWORD' | translate}}</mat-label>
+          <input matInput type="{{passwordType}}" required formControlName="password">
           <button mat-button *ngIf="formGroup.controls['password'].value" matSuffix mat-icon-button
             attr.aria-label="{{(passwordType === 'password' ? 'SHOW_PASSWORD' : 'HIDE_PASSWORD') | translate}}"
             (click)="togglePasswordVisibility()">
@@ -48,9 +49,9 @@
         </mat-form-field>
 
         <!-- Confirm password -->
-        <mat-form-field *ngIf="!login">
-          <input matInput type="{{passwordType}}" required placeholder="{{'CONFIRM_PASSWORD' | translate}}"
-            formControlName="confirmPassword">
+        <mat-form-field *ngIf="!login"  appearance="outline">
+          <mat-label>{{'CONFIRM_PASSWORD' | translate}}</mat-label>
+          <input matInput type="{{passwordType}}" required formControlName="confirmPassword">
           <button mat-button *ngIf="formGroup.controls['confirmPassword'].value" matSuffix mat-icon-button
             attr.aria-label="{{(passwordType === 'password' ? 'SHOW_PASSWORD' : 'HIDE_PASSWORD') | translate}}"
             (click)="togglePasswordVisibility()">
@@ -65,8 +66,10 @@
 
       <!-- Login button -->
       <div class="mb-1" fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="1rem">
-        <button fxFlex="100" mat-flat-button [color]="getSignOptions().button.color" (click)="loginWithEmail()"
-          attr.arial-label="{{getSignOptions().button.text | translate}}">{{getSignOptions().button.text | translate}}</button>
+        <button class="login-button" fxFlex="100" mat-flat-button [color]="getSignOptions().button.color"
+          (click)="loginWithEmail()" attr.arial-label="{{getSignOptions().button.text | translate}}">
+          <div class="pt-H">{{getSignOptions().button.text | translate}}</div>
+        </button>
       </div>
     </form>
 
