--- a/src/app/classroom/components/side-menu/side-menu.component.scss
+++ b/src/app/classroom/components/side-menu/side-menu.component.scss
@@ -8,9 +8,22 @@
   .user-avatar {
     max-width: 64px;
     width: 100%;
-    padding: .5em;
-    border: 1px solid var(--other-border-color);
-    border-radius: 50%;
+    border-radius: 4px;
+    padding: 8px;
+    border: 1px solid #dfdfdf;
+    cursor: pointer;
+    transition: .2s;
+
+    &:hover {
+      border-width: 2px;
+      border-color: #555;
+      padding: 7px !important;
+    }
+
+    img {
+      max-width: 100%;
+      border-radius: 50%;
+    }
   }
 }
 
@@ -19,7 +32,7 @@
   border-left-style: solid;
   border-left-width: 4px;
   border-left-color: transparent;
-  
+
   &.active {
     border-left-color: var(--light-theme-accent);
     transition: all .2s;
