--- a/src/app/classroom/components/side-menu/side-menu.component.html
+++ b/src/app/classroom/components/side-menu/side-menu.component.html
@@ -4,10 +4,10 @@
     <!-- User -->
     <div class="user-menu" fxLayout="column" fxLayoutAlign="center center">
       <a class="user-avatar" [@animateAvatar]="linkText ? 'huge' : 'small'">
-        <img class="user-avatar-image" [src]="user?.avatar || 'assets/svgs/user-default.svg'" alt="Avatar">
+        <img class="user-avatar-image" [src]="getUser.getUserLogged()?.avatar || 'assets/svgs/user-default.svg'" alt="Avatar">
       </a>
       <span class="user-name mt-1"
-        [@animateText]="linkText ? 'show' : 'hide'">{{ getUser.getUserLogged()?.metadata?.name || getUser.getUserLogged()?.metadata?.email}} </span>
+        [@animateText]="linkText ? 'show' : 'hide'">{{ getUser.getUserLogged()?.name || getUser.getUserLogged()?.email}} </span>
     </div>
 
     <!-- Menu -->
