--- a/src/app/classroom/components/pickup-image/pickup-image.component.scss
+++ b/src/app/classroom/components/pickup-image/pickup-image.component.scss
@@ -30,6 +30,7 @@
 
     img {
       max-width: 110px;
+      width: 100%;
       border-radius: 50%;
       border: 4px solid white;
       background-color: white;
