refactor: " -> ' on translate literals

--- a/src/app/authentication/components/login/login.component.html
+++ b/src/app/authentication/components/login/login.component.html
@@ -13,7 +13,7 @@
 
     <!-- Title -->
     <h1 class="m-0 mb-h txt-thin">{{title}}</h1>
-    <span class="mat-body mat-hint mb-1 block">{{"APP_SUBTITLE" | translate}}</span>
+    <span class="mat-body mat-hint mb-1 block">{{'APP_SUBTITLE' | translate}}</span>
 
     <!-- Form -->
     <form [formGroup]="formGroup" class="login-form pt-h">
