--- a/src/app/classroom/students/components/student-creation/student-creation.component.html
+++ b/src/app/classroom/students/components/student-creation/student-creation.component.html
@@ -12,7 +12,7 @@
 
   <form [formGroup]="formGroup" autocomplete="off">
 
-    <h3 class="mat-h2 mat-hint">{{"STUDENT_PERSONAL_DATA" | translate}}</h3>
+    <h3 class="mat-h2 mat-hint">{{'STUDENT_PERSONAL_DATA' | translate}}</h3>
 
     <div class="mb-2 mt-1 f-wrap" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="start center">
 
@@ -61,7 +61,7 @@
       </div>
     </div>
 
-    <h3 class="mat-h2 mat-hint">{{"STUDENT_PARENTS_DATA" | translate}}</h3>
+    <h3 class="mat-h2 mat-hint">{{'STUDENT_PARENTS_DATA' | translate}}</h3>
 
     <div class="mb-2 mt-1 f-wrap" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between center">
 
@@ -99,7 +99,7 @@
 
     </div>
 
-    <h3 class="mat-h2 mat-hint">{{"STUDENT_CONSERVATORY_DATA" | translate}}</h3>
+    <h3 class="mat-h2 mat-hint">{{'STUDENT_CONSERVATORY_DATA' | translate}}</h3>
 
     <div class="mb-H mt-1 f-wrap" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between center">
 
