--- a/src/app/classroom/student-profile/components/student-profile/student-profile.component.scss
+++ b/src/app/classroom/student-profile/components/student-profile/student-profile.component.scss
@@ -1,9 +1,11 @@
-mat-form-field {
-  width: 100%;
-  padding: 0 5px;
-}
+.avatar {
 
-.add-button {
-  position: relative;
-  // top: -11px;
+  img {
+    max-width: 110px;
+    width: 100%;
+    padding: 5px;
+    border-radius: 50%;
+    background-color: white;
+    border: 1px solid #ccc;
+  }
 }
