--- a/src/app/classroom/components/pickup-image/pickup-image.component.html
+++ b/src/app/classroom/components/pickup-image/pickup-image.component.html
@@ -1,5 +1,5 @@
 <div class="pickup-image-button">
 	<a matRipple ngClass.xs="xs" class="pickup-link" (click)="pickup()">
-		<img class="avatar" [src]="resourceImagePath + image.id + '.svg'" alt="{{'AVATAR' | translate}}">
+		<img class="avatar" [src]="srcImage({img: image.id})" alt="{{'AVATAR' | translate}}">
 	</a>
 </div>
