--- a/src/app/shared/components/floating-button/floating-button.component.html
+++ b/src/app/shared/components/floating-button/floating-button.component.html
@@ -1,4 +1,4 @@
-<button class="a13-floating-button" mat-flat-button color="primary" attr.arial-label="{{'ADD_STUDENT' | translate}}"
+<button class="floating-button" mat-flat-button color="primary" attr.arial-label="{{'ADD_STUDENT' | translate}}"
 	(click)="toAction()">
 	<mat-icon *ngIf="icon" [@animateFloatingButton]="buttonState">{{icon}}</mat-icon>
 	<span *ngIf="text" class="text-button">{{text | translate}}</span>
