--- a/src/app/shared/components/floating-button/floating-button.component.scss
+++ b/src/app/shared/components/floating-button/floating-button.component.scss
@@ -3,3 +3,26 @@
   top: 1px;
   margin-left: 5px;
 }
+
+@media only screen and (max-width: 600px) {
+
+  .floating-button {
+    position: fixed;
+    bottom: 2rem;
+    right: 1.75rem;
+    z-index: 1;
+    height: 4rem;
+    border-radius: 50%;
+
+    .mat-icon {
+      font-size: 1.9rem;
+      width: 32px;
+      height: 30px;
+    }
+
+    .text-button {
+      display: none;
+    }
+  }
+
+}
